--- a/app/views/noticias/noticias.ejs
+++ b/app/views/noticias/noticias.ejs
@@ -14,6 +14,14 @@
 				<td>Titulo</td>
 				<td>Noticia</td>
 			</tr>
+			<% for(var i=0; i < noticias.length; i++){ %>
+			<tr>
+				<td><%=noticias[i].id_noticia%></td>
+				<td><%=noticias[i].titulo%></td>
+				<td><%=noticias[i].noticia%></td>
+
+			</tr>
+			<% } %>
 
 		</table>
 
